# plugins

./: Cargo.toml  README.md  build.ps1  installer.nsi
.github/workflows/: rust.yml
compressor/: Cargo.toml
compressor/src/: gui.rs  params.rs  plugin.rs  state.rs
compressor/src/dsp/: mod.rs
drust/: Cargo.toml  README.md  build.rs
drust/.github/workflows/: ci.yml
drust/src/: download.rs  gui.rs  lib.rs  params.rs  plugin.rs  shared.rs  state.rs
drust/src/drumkit/: drumkit.rs  instrument.rs  mod.rs  sample.rs
drust/src/engine/: audio_file.rs  drumgizmo.rs  events.rs  filters.rs  mod.rs  voice.rs
drust/src/midi/: mapper.rs  mod.rs
drust/src/utils/: random.rs
eq/: Cargo.toml  build.rs
eq/src/: gui.rs  lib.rs  plugin.rs  state.rs
eq/src/dsp/: mod.rs
rural-modeler/: Cargo.toml  LICENSE  README.md  build.rs
rural-modeler/src/: gui.rs  lib.rs  params.rs  plugin.rs  state.rs  tone3000.rs
rural-modeler/src/dsp/: activations.rs  core.rs  filters.rs  get_dsp.rs  ir.rs  mod.rs  model_config.rs  nam.rs  noise_gate.rs  tone_stack.rs  version.rs
src/: lib.rs  simd.rs
src/bandwidth/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/common/: bus.rs  fft.rs  mod.rs  modulated_delay.rs  param_events.rs  slot.rs
src/compressor/: gui.rs  mod.rs  params.rs  plugin.rs  state.rs
src/compressor/dsp/: mod.rs
src/deesser/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/delay/: dsp.rs  gui.rs  mod.rs  params.rs  plugin.rs  state.rs
src/drust/: download.rs  gui.rs  mod.rs  plugin.rs  shared.rs  state.rs
src/drust/audio/: audiofile.rs  mixer.rs  mod.rs
src/drust/drumkit/: channel.rs  drumkit.rs  instrument.rs  loader.rs  sample.rs
src/drust/engine/: audio_file.rs  drumgizmo.rs  filters.rs  limiter.rs  mod.rs  settings.rs
src/eq/: dsp.rs  gui.rs  mod.rs  params.rs  plugin.rs  state.rs
src/eq/common/: dsp.rs  gui.rs  mod.rs  params.rs  plugin.rs  state.rs
src/eq/dsp/: mod.rs
src/eq/graphic/: dsp.rs  gui.rs  params.rs  plugin.rs
src/eq/parametric/: dsp.rs  gui.rs  mod.rs  params.rs  plugin.rs
src/imager/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/kick/: dsp.rs  export.rs  gui.rs  mod.rs  params.rs  plugin.rs  simd_kick.rs  state.rs
src/kick/dsp/: distortion.rs  envelope.rs  filter.rs  limiter.rs  mod.rs  noise.rs  oscillator.rs
src/kick/gui/: envelope_editor.rs  mod.rs
src/limiter/: dsp.rs  gui.rs  plugin.rs  state.rs
src/maximizer/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/monitoring/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/reverb/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/rural_modeler/: gui.rs  mod.rs  params.rs  plugin.rs  state.rs  tone3000.rs
src/rural_modeler/dsp/: activations.rs  core.rs  error.rs  get_dsp.rs  ir.rs  model_config.rs  nam.rs  noise_gate.rs  tone_stack.rs  version.rs
src/saturator/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/stereo/: dsp.rs  gui.rs  params.rs  plugin.rs  state.rs
src/widener/: dsp.rs  gui.rs  mod.rs  params.rs  plugin.rs  state.rs
xtask/src/: main.rs
