[package]
name = "maolan-plugins"
version = "0.0.1"
edition = "2024"
description = "Audio plugins for the Maolan ecosystem"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/plugins"
homepage = "https://maolan.github.io"
keywords = ["audio", "plugin", "clap"]
categories = ["multimedia::audio"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap-clap = "0.5.0"
base64 = "0.22.1"
dirs = "6"
hound = "3.5.1"
maolan-baseview = "0.0.2"
maolan-widgets = "0.0.8"
parking_lot = "0.12.3"
quick-xml = { version = "0.37.0", features = ["serialize"] }
rand = "0.8.5"
raw-window-handle = "0.5"
rayon = "1.10"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "1.0.69"
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
