[package]
name = "maolan-compressor"
version = "0.0.1"
edition = "2024"
description = "Rust CLAP compressor plugin based on LSP compressor"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/maolan"
keywords = ["audio", "plugin", "clap", "compressor"]
categories = ["multimedia::audio"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap-clap = "0.5.0"
maolan-baseview = "0.0.2"
parking_lot = "0.12.3"
raw-window-handle = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
maolan-widgets = "0.0.8"
