[package]
name = "drust"
version = "0.0.1"
edition = "2024"
description = "DrumGizmo-inspired drum sampler CLAP plugin"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/maolan"
keywords = ["audio", "plugin", "clap", "drums", "sampler"]
categories = ["multimedia::audio"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap-clap = "0.5.0"
hound = "3.5.1"
parking_lot = "0.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
rand = "0.8.5"
rayon = "1.10"
quick-xml = { version = "0.37.0", features = ["serialize"] }
