[package]
name = "rural-modeler"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap-clap = "0.5.0"
hound = "3.5.1"
iced_baseview = { git = "https://codeberg.org/BillyDM/nih-plug.git", branch = "main", features = ["image"] }
parking_lot = "0.12.3"
raw-window-handle = "0.5"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
maolan-widgets = "0.0.6"
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.9"
