[package]
name = "rural-modeler"
version = "0.0.1"
edition = "2024"
description = "Rust CLAP Neural Amp Modeler plugin with Tone3000 integration"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/maolan"
keywords = ["audio", "plugin", "clap", "nam", "guitar"]
categories = ["multimedia::audio"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap-clap = "0.5.0"
hound = "3.5.1"
maolan-baseview = "0.0.1"
parking_lot = "0.12.3"
raw-window-handle = "0.5"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
maolan-widgets = "0.0.8"
ureq = { version = "2.12.1", features = ["json"] }
urlencoding = "2.1.3"
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.9"
